templates/oci-html-site/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site
spec:
  selector:
    app: site
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
